syntax = 'proto3';

// avoid name collisions in the Protocol Buffers name space as well as in non-Java languages
package io.github.joumenharzli.grpcserver;

// Java package name for the generated classes
option java_package = "io.github.joumenharzli.grpcserver.proto";

// defines the class name which should contain all of the classes in this file
option java_outer_classname = "UserProto";

message User {

    string id = 1;
    string name = 2;
    string email = 3;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;
    }

    repeated PhoneNumber phones = 4;

}

message UserFilters {
    string id = 1;
    string name = 2;
    string email = 3;
}
